# wlsops-hack

./: .gitignore  .hack_mmap.o.d  CMakeLists.txt  Kbuild  Makefile  README.md  WLSINC.h  hack_entry.c  hack_mmap.c  hack_mmap.h  modify_edca.py  wlsctrl.c  wlsops.c  wlsops.h
include/: timing_krn.h
iwldvm/: CMakeLists.txt
iwlmvm/: CMakeLists.txt  iwlmvm-mod.patch
wlsctrl/: CMakeLists.txt  Makefile  timing_usr.h  wlsctrl.c  wlsctrl.h  wlsctrl.py  wlsctrl_test.c  wlsctrl_usr.c
wlsctrl/src/: wlsctrl.c  wlsctrl.h
wlsctrl/tests/: test_cw_adjust.py  test_cw_high.py
wlsctrl/wlsctrl/: wlsctrl.py
wlsops/: CMakeLists.txt  hack_entry.c  wlsops.h
